<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <TextView
        android:layout_marginLeft="@dimen/dimen5dp"
        android:layout_marginTop="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"/>
    <RelativeLayout
        android:layout_marginLeft="@dimen/dimen5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb"
            android:id="@+id/btnLB"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:id="@+id/btnKG"
            android:layout_toLeftOf="@+id/btnLB"
            android:layout_marginRight="@dimen/dimen5dp"
            />
        <EditText
            android:layout_toLeftOf="@+id/btnKG"
            android:id="@+id/edtWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="2.01 LB"/>
    </RelativeLayout>
    <TextView
        android:layout_marginLeft="@dimen/dimen5dp"
        android:layout_marginTop="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"/>
    <RelativeLayout
        android:layout_marginLeft="@dimen/dimen5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in"
            android:id="@+id/btnIN"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CM"
            android:id="@+id/btnCM"
            android:layout_toLeftOf="@+id/btnIN"
            android:layout_marginRight="@dimen/dimen5dp"
            />
      <LinearLayout
          android:layout_toLeftOf="@+id/btnCM"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          <EditText
              android:id="@+id/edtHeight1"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:inputType="number"
              android:text="0 FT"/>
          <EditText
              android:id="@+id/edtHeight2"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:inputType="number"
              android:text="0.0 IN"/>
      </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="@dimen/dimen15dp"
        android:layout_marginLeft="@dimen/dimen5dp"
        android:layout_marginRight="@dimen/dimen5dp"
        android:layout_marginBottom="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="true"
            android:id="@+id/btnSave"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/blue_dark"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnCanel"
            android:textAllCaps="true"
            android:layout_toLeftOf="@+id/btnSave"
            android:layout_marginRight="@dimen/dimen10dp"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/blue_dark"
            />

    </RelativeLayout>
</LinearLayout>