<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_preview"
    >
 <RelativeLayout
     android:padding="@dimen/dimen10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <ImageView
         android:layout_width="@dimen/dimen35dp"
         android:layout_height="@dimen/dimen25dp"
         android:id="@+id/ivBack"
         android:src="@drawable/bg_btn_state_back"
         android:layout_centerVertical="true"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/ivBack"
         android:layout_centerVertical="true"
         android:text="@string/rest_day"
         android:layout_marginLeft="@dimen/dimen10dp"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:textSize="@dimen/text_size_24"
         />
 </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rest_description"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_16"
            android:layout_below="@+id/ivRest"
            />
        <ImageView
            android:id="@+id/ivRest"
            android:layout_width="@dimen/dimen300dp"
            android:layout_height="@dimen/dimen300dp"
            android:src="@drawable/ic_rest_day"
            android:layout_centerInParent="true"
            android:background="@null"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen1dp"
            android:background="@color/gray_dark"
            android:layout_above="@+id/llbottom"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:id="@+id/llbottom">
            <Button
                android:id="@+id/btnFinishs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen10dp"
                android:background="@drawable/bg_btn_radius_24dp"
                android:text="@string/finish"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/white"
                />
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/ad_banner_id">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>


    </RelativeLayout>
</LinearLayout>