<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_card_silver"
    >
    <RelativeLayout
        android:padding="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivBack"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen10dp"
            android:text="@string/me"
            android:textStyle="bold"
            android:id="@+id/tvTitle"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_24"
            />
    </RelativeLayout>
   <LinearLayout
       android:padding="@dimen/dimen5dp"
       android:background="@drawable/bg_btn_me"
       android:id="@+id/btnRateUs"
       android:layout_margin="@dimen/dimen10dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <ImageView
           android:layout_marginLeft="@dimen/dimen5dp"
           android:layout_gravity="center"
           android:layout_width="25dp"
           android:layout_height="25dp"
           android:src="@drawable/ic_rate_star_off"/>
       <TextView
           android:layout_marginLeft="@dimen/dimen15dp"
           android:layout_gravity="center"
           android:text="@string/rate_us"
           android:textSize="@dimen/text_size_16"
           android:textColor="@color/black"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           />
   </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen1dp"
        android:background="@color/gray_dark"
        android:layout_marginLeft="@dimen/dimen10dp"
        android:layout_marginRight="@dimen/dimen10dp"

        />
    <LinearLayout
        android:padding="@dimen/dimen5dp"
        android:background="@drawable/bg_btn_me"
        android:id="@+id/btnShareWith"
        android:layout_margin="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginLeft="@dimen/dimen5dp"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_share"/>
        <TextView
            android:layout_marginLeft="@dimen/dimen15dp"
            android:layout_gravity="center"
            android:text="@string/share_with_friends"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen1dp"
        android:background="@color/gray_dark"
        android:layout_marginLeft="@dimen/dimen10dp"
        android:layout_marginRight="@dimen/dimen10dp"/>
    <LinearLayout
        android:padding="@dimen/dimen5dp"
        android:background="@drawable/bg_btn_me"
        android:id="@+id/btnFeeBack"
        android:layout_margin="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginLeft="@dimen/dimen5dp"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_feedback"/>
        <TextView
            android:layout_marginLeft="@dimen/dimen15dp"
            android:layout_gravity="center"
            android:text="@string/feedback"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen1dp"
        android:background="@color/gray_dark"
        android:layout_marginLeft="@dimen/dimen10dp"
        android:layout_marginRight="@dimen/dimen10dp"/>
    <LinearLayout
        android:padding="@dimen/dimen5dp"
        android:background="@drawable/bg_btn_me"
        android:id="@+id/btnDeleteAllData"
        android:layout_margin="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginLeft="@dimen/dimen5dp"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/delete_all"/>
        <TextView
            android:layout_marginLeft="@dimen/dimen15dp"
            android:layout_gravity="center"
            android:text="@string/delete_all_data"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen1dp"
        android:background="@color/gray_dark"
        android:layout_marginLeft="@dimen/dimen10dp"
        android:layout_marginRight="@dimen/dimen10dp"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ad_banner_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
</LinearLayout>