<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bg_app"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rltTop"
        android:layout_alignParentTop="true"
        android:padding="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/dimen35dp"
            android:layout_height="@dimen/dimen25dp"
            android:id="@+id/ivBack"
            android:src="@drawable/bg_btn_state_back"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <com.marcok.stepprogressbar.StepProgressBar
        android:layout_below="@+id/rltTop"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen5dp"
        android:id="@+id/stepProgressBar"
        app:cumulativeDots="true"
        app:activeDotIndex="1"
        app:activeDotColor="@color/material_deep_teal_500"
        app:inactiveDotColor="@color/material_blue_grey_800"
        app:activeDotIcon="@drawable/bg_card_gold"
        app:inactiveDotIcon="@drawable/bg_card_premium"
        app:numberDots="6"
        app:dotSize="@dimen/dimen10dp"
        app:spacing="0dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen250dp"
        android:layout_below="@+id/stepProgressBar"
        android:layout_marginTop="@dimen/dimen10dp"
        android:layout_marginBottom="@dimen/dimen10dp"
        android:id="@+id/rltRun"
        >

            <ImageView
                android:id="@+id/ivRun"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_plank" />

            <ImageView
                android:id="@+id/iv_Video"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/dimen15dp"
                android:layout_marginRight="@dimen/dimen15dp"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:layout_width="@dimen/dimen35dp"
                android:layout_height="@dimen/dimen35dp"
                android:src="@drawable/bg_btn_state_info"
                />
    </RelativeLayout>


    <LinearLayout
        android:layout_below="@+id/rltRun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_20"
            android:id="@+id/tvTitle"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="@dimen/dimen5dp"
            android:textAllCaps="false"
            android:textColor="@color/each_side"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_18"
            android:id="@+id/tvEachSide"
            android:text="@string/each_side"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
 <LinearLayout
     android:layout_marginTop="@dimen/dimen10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal">
     <TextView
         android:textColor="@color/blue_dark"
         android:textSize="@dimen/text_size_28"
         android:id="@+id/tvTime"
         android:textStyle="bold"
         android:text="X23"
         android:gravity="center"
         android:textAlignment="center"
         android:paddingLeft="@dimen/dimen5dp"
         android:paddingRight="@dimen/dimen5dp"
         android:layout_width="wrap_content"
         android:layout_marginRight="@dimen/dimen15dp"
         android:layout_height="wrap_content"/>
     <TextView
         android:gravity="center_vertical"
         android:paddingTop="@dimen/dimen2dp"
         android:paddingBottom="@dimen/dimen2dp"
         android:layout_marginLeft="@dimen/dimen15dp"
         android:background="@drawable/bg_btn_restart"
         android:textColor="@color/blue_dark"
         android:paddingLeft="@dimen/dimen15dp"
         android:paddingRight="@dimen/dimen15dp"
         android:textSize="@dimen/text_size_20"
         android:id="@+id/tvTimeIncease"
         android:textStyle="bold"
         android:text="@string/plus_time"
         android:textAlignment="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_above="@id/adView"
        android:layout_marginLeft="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimen5dp"
        android:layout_marginRight="@dimen/dimen10dp"
        android:layout_marginBottom="@dimen/dimen10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivbefore"
            android:layout_width="@dimen/dimen35dp"
            android:layout_height="@dimen/dimen35dp"
            android:layout_marginRight="@dimen/dimen50dp"
            android:src="@drawable/ic_state_before"/>
        <FrameLayout
            android:id="@+id/btnFinishs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_btn_radius_24dp"

            >
            <ImageView
                android:id="@+id/ivFinish"
                android:layout_marginLeft="@dimen/dimen25dp"
                android:layout_marginRight="@dimen/dimen25dp"
                android:layout_marginTop="@dimen/dimen5dp"
                android:layout_marginBottom="@dimen/dimen5dp"
                android:layout_width="@dimen/dimen25dp"
                android:layout_height="@dimen/dimen25dp"
                android:src="@drawable/ic_check_run"
                />
        </FrameLayout>

        <ImageView
            android:id="@+id/ivAfter"
            android:layout_width="@dimen/dimen35dp"
            android:layout_height="@dimen/dimen35dp"
            android:src="@drawable/ic_state_after"
            android:layout_marginLeft="@dimen/dimen50dp"
            />
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="@string/ad_banner_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>